ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Reference__c/fields/AddressFlag__c.field-meta.xml
<CustomField>
    <fullName>AddressFlag__c</fullName>
    <label>Address Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>