ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Reference__c/fields/Exposure__c.field-meta.xml
<CustomField>
    <fullName>Exposure__c</fullName>
    <label>Exposure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>