ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Reference__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Customer_references</relationshipName>
    <type>Lookup</type>
</CustomField>