ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Reference__c/fields/Maker_Date__c.field-meta.xml
<CustomField>
    <fullName>Maker_Date__c</fullName>
    <label>Maker Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>