ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Reference__c/fields/Refered__c.field-meta.xml
<CustomField>
    <fullName>Refered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refered</label>
    <type>Checkbox</type>
</CustomField>