ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Reference__c/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <label>Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>