ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Code__c</columns>
    <columns>Phone__c</columns>
    <columns>Loan_Application__c</columns>
    <columns>Applicant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>